# updated_serial_driver

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  compile_commands.json  index.html  result.txt  sonar.properties
.cspell/: custom-dictionary-workspace.txt
.github/workflows/: ci.yml
docs/: register_map.md  unused_and_dead_code.md
include/device_driver/: device_driver.h  device_driver_internal.h  errors.h  hw_abstraction.h  queue.h  register_map.h  registers.h
include/serial_driver/: errors.h  queue.h  registers.h  serial_driver.h  serial_driver_internal.h
src/: device_driver.c  device_driver_rx.c  device_driver_test_main.c  device_driver_tx.c  hw_abstraction.c  queue.c  registers.c  serial_driver.c  serial_driver_rx.c  serial_driver_tx.c
tests/: device_driver_test_main.c  test_device_driver.cpp  test_device_driver_coverage.cpp  test_device_driver_internal.cpp  test_queue.cpp  test_serial_driver.cpp
